--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.15.0",
     "sass": "^1.66.1",
     "sort-by": "^1.2.0"
